wip model settings and uploads
